// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegisterCard should match a snapshot 1`] = `
<section
  className="LoginContent"
>
  <div
    className="hero-image"
    style={
      Object {
        "backgroundImage": "url(https://image.tmdb.org/t/p/original/7RyHsO4yDXtBv1zUU3mTpHeQ0d5.jpg)",
        "backgroundPosition": "center top",
        "backgroundRepeat": "no-repeat",
        "backgroundSize": "cover",
      }
    }
  />
  <div
    className="opacity-filter"
  />
  <form
    className="login-card"
  >
    <h2
      className="login-card-title"
    >
      Register an Account
    </h2>
    <input
      autoComplete="off"
      className="register-name-input"
      name="name"
      onChange={[Function]}
      placeholder="Name"
      required="true"
      type="text"
      value=""
    />
    <input
      autoComplete="off"
      name="email"
      onChange={[Function]}
      placeholder="Email"
      required="true"
      type="email"
      value=""
    />
    <input
      autoComplete="off"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      required="true"
      type="password"
      value=""
    />
    <button
      className="register-submit-btn"
      onClick={[Function]}
      type="button"
    >
      Register
    </button>
  </form>
</section>
`;

exports[`RegisterCard should render error if there is one 1`] = `
<section
  className="LoginContent"
>
  <div
    className="hero-image"
    style={
      Object {
        "backgroundImage": "url(https://image.tmdb.org/t/p/original/7RyHsO4yDXtBv1zUU3mTpHeQ0d5.jpg)",
        "backgroundPosition": "center top",
        "backgroundRepeat": "no-repeat",
        "backgroundSize": "cover",
      }
    }
  />
  <div
    className="opacity-filter"
  />
  <form
    className="login-card"
  >
    <h2
      className="login-card-title"
    >
      Register an Account
    </h2>
    <input
      autoComplete="off"
      className="register-name-input"
      name="name"
      onChange={[Function]}
      placeholder="Name"
      required="true"
      type="text"
      value=""
    />
    <input
      autoComplete="off"
      name="email"
      onChange={[Function]}
      placeholder="Email"
      required="true"
      type="email"
      value=""
    />
    <input
      autoComplete="off"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      required="true"
      type="password"
      value=""
    />
    <p
      className="login-error-text"
    >
      test is not passing
      . Please try again.
    </p>
    <button
      className="register-submit-btn"
      onClick={[Function]}
      type="button"
    >
      Register
    </button>
  </form>
</section>
`;
